--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(HomeWork2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(HomeWork2 main.cpp)
+add_executable(homework2 hw2.cpp)
+add_executable(homework1 hw1.cpp)
