--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
 set(CMAKE_CXX_STANDARD 14)
-
+project ("Polytech")
 add_subdirectory (homework1)
 add_subdirectory (homework2)
