--- a/homework1/CMakeLists.txt
+++ b/homework1/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.20)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(homework1 hw1.cpp)
+add_executable(homework1 "hw1.cpp")
